compiler/grammar.txt
code -> function code
code -> funcContent
function -> func FNAME ( params ) funcContent
params -> ID params'
params -> ''
params' -> , ID params'
params' -> ''
funcContent -> ( vars ) { block }
vars -> ID vars'
vars -> ''
vars' -> , ID vars'
vars' -> ''
block -> statement ; block
block -> ''
statement -> return val
statement -> load ID val
statement -> store val val
statement -> FNAME ( paramCall )
statement -> assignment
assignment -> ID = asgmtVal
asgmtVal -> valOp
valOp -> val valOp'
valOp -> ~ ID
valOp' -> OP val
valOp' -> ''
asgmtVal -> FNAME ( paramCall )
val -> ID
val -> NUM
OP -> +
OP -> -
OP -> *
OP -> /
OP -> %
OP -> &
OP -> |
OP -> ^
OP -> <<
OP -> >>
paramCall -> valOp paramCall'
paramCall -> ''
paramCall' -> , valOp paramCall'
paramCall' -> ''
statement -> if ( condition ) { block } elseBlock
elseBlock -> else { block }
elseBlock -> ''
statement -> while ( condition ) { block }
condition -> true
condition -> val CMP val
CMP -> ==
CMP -> <
CMP -> >
CMP -> <=
CMP -> >=
CMP -> !=
